Add responsive navbar and fix footer layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <img src="./images/Logo.svg" alt="logo">
             </div>
 
+            <div class="nav-mobile">
+                <input type="checkbox" name="" id="nav-mobile-checkbox">
+                <label class="nav-mobile-label" for="nav-mobile-checkbox"><img src="./images/menu.png"
+                        alt="menu icon"></label>
+            </div>
+
             <nav class="nav-bar">
                 <a href="#about" class="nav-bar__links">About</a>
                 <a href="#features" class="nav-bar__links">Features</a>
@@ -26,6 +32,7 @@
                 <a href="#testimonials" class="nav-bar__links">Testimonials</a>
                 <a href="#help" class="nav-bar__links">Help</a>
             </nav>
+            
 
             <div class="bottoms">
                 <a class="sign-in" href="#">sign in</a>
@@ -34,8 +41,6 @@
         </header>
 
         <main class="main-view">
-
-
             <section class="head">
                 <div class="head-img">
                     <img src="./images/Illustration 1.png" alt="">
