--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="LaslesVPN Landing Page - Secure and fast VPN access anywhere, anytime." />
     <title>FREEBIES-Landingpage-LaslesVPN--Community</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,10 +20,9 @@
                 <img src="./images/Logo.svg" alt="logo">
             </div>
 
-            <div class="nav-mobile">
-                <input type="checkbox" name="" id="nav-mobile-checkbox">
-                <label class="nav-mobile-label" for="nav-mobile-checkbox"><img src="./images/menu.png"
-                        alt="menu icon"></label>
+            <div class="menu">
+                <input type="checkbox" name="" id="menu__checkbox">
+                <label class="menu__label" for="menu__checkbox"><img src="./images/menu.png" alt="menu icon"></label>
             </div>
 
             <nav class="nav-bar">
@@ -32,7 +32,7 @@
                 <a href="#testimonials" class="nav-bar__links">Testimonials</a>
                 <a href="#help" class="nav-bar__links">Help</a>
             </nav>
-            
+
 
             <div class="bottoms">
                 <a class="sign-in" href="#">sign in</a>
@@ -40,18 +40,18 @@
             </div>
         </header>
 
-        <main class="main-view">
-            <section class="head">
-                <div class="head-img">
-                    <img src="./images/Illustration 1.png" alt="">
+        <main class="main">
+            <section class="hero">
+                <div class="hero__img">
+                    <img src="./images/Illustration 1.png" alt="Illustration image">
                 </div>
 
-                <div class="head-content">
-                    <h1>Want anything to be easy with LaslesVPN.</h1>
-                    <p class="main-view-header">Provide a network for all your needs with ease and fun using LaslesVPN
+                <div class="section__content">
+                    <h1 class="hero__header">Want anything to be easy with LaslesVPN.</h1>
+                    <p class="hero__paragraph">Provide a network for all your needs with ease and fun using LaslesVPN
                         discover
                         interesting features from us.</p>
-                    <a href="" class="get-start-link">Get Started</a>
+                    <a href="#" class="hero__btn">Get Started</a>
                 </div>
             </section>
 
@@ -60,18 +60,18 @@
             <article class="spread">
                 <div class="user">
                     <img src="./images/Icon/user.png" alt="user png">
-                    <p>90+</p>
-                    <p>Users</p>
+                    <p class="number">90+</p>
+                    <p class="title">Users</p>
                 </div>
                 <div class="location">
                     <img src="./images/Icon/location.png" alt="location png">
-                    <p>30+</p>
-                    <p>Locations</p>
+                    <p class="number">30+</p>
+                    <p class="title">Locations</p>
                 </div>
                 <div class="server">
                     <img src="./images/Icon/Server.png" alt="Server png">
-                    <p>50+</p>
-                    <p>Servers</p>
+                    <p class="number">50+</p>
+                    <p class="title">Servers</p>
                 </div>
             </article>
 
@@ -81,8 +81,9 @@
                 </div>
 
                 <div class="features-content">
-                    <h2>We Provide Many Features You Can Use</h2>
-                    <p class="features-p">You can explore the features that we provide with fun and have their own
+                    <h2 class="features__header">We Provide Many Features You Can Use</h2>
+                    <p class="features__paragraph">You can explore the features that we provide with fun and have their
+                        own
                         functions each
                         feature.
                     </p>
@@ -109,9 +110,9 @@
 
             </section>
 
-            <section class="pricing" id="pricing">
-                <h2>Choose Your Plan</h2>
-                <p class="pricing-p">Let's choose the package that is best for you and explore it happily and
+            <section class="section pricing" id="pricing">
+                <h2 class="section__header">Choose Your Plan</h2>
+                <p class="section__paragraph">Let's choose the package that is best for you and explore it happily and
                     cheerfully.</p>
                 <div class="offers">
                     <div class="offer-container">
@@ -197,9 +198,10 @@
                 </div>
             </section>
 
-            <section class="network">
-                <h2>Huge Global Network of Fast VPN</h2>
-                <p class="network-p">See LaslesVPN everywhere to make it easier for you when you move locations.</p>
+            <section class="section network">
+                <h2 class="section__header">Huge Global Network of Fast VPN</h2>
+                <p class="section__paragraph">See LaslesVPN everywhere to make it easier for you when you move
+                    locations.</p>
                 <div class="network-img">
                     <img src="./images/Huge Global.png" alt="Global Map">
                 </div>
@@ -220,12 +222,13 @@
 
             </article>
 
-            <section class="testimonials" id="testimonials">
+            <section class="section testimonials" id="testimonials">
 
-                <h2>
+                <h2 class="section__header">
                     Trusted by Thousands of Happy Customer
                 </h2>
-                <p class="testimonials-p">These are the stories of our customers who have joined us with great pleasure
+                <p class="section__paragraph">These are the stories of our customers who have joined us with great
+                    pleasure
                     when using this crazy
                     feature.</p>
 
@@ -318,10 +321,12 @@
 
 
 
-            <article class="subscribe">
-                <h2>Subscribe Now for Get Special Features!</h2>
-                <p>Let's subscribe with us and find the fun.</p>
-                <button type="button" class="subscribe-button get-start-link">Subscribe Now</button>
+            <article class="section subscribe">
+                <div class="section__content">
+                    <h2 class="section__header">Subscribe Now for Get Special Features!</h2>
+                    <p class="section__paragraph">Let's subscribe with us and find the fun.</p>
+                </div>
+                <button type="button" class="subscribe__btn hero__btn">Subscribe Now</button>
             </article>
 
 
